apps/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - argocd.home.alden.ai
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
